word wrap fix

--- a/poetr/static/css/styles.css
+++ b/poetr/static/css/styles.css
@@ -84,7 +84,9 @@ img {
 .poemText {
    max-width: 300px;
    text-align: center;
+   display: inline-block;
    word-wrap: break-word;
+   white-space: normal;
 }
 #id_title {
     max-width: 300px;
